fvcode3d is now correctly added to the list of libraries

--- a/FVCode3D/src/CMakeLists.txt
+++ b/FVCode3D/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Create static library
 add_subdirectory(FVCode3D)
-SET(LIBRARIES fvcode3d ${LIBRARIES})
+SET(LIBRARIES fvcode3d ${LIBRARIES} CACHE INTERNAL "")
 
 add_executable(fvcode3d.exe main.cpp )
 # Create executable and link libraries
