--- a/FVCode3D/external/build
+++ b/FVCode3D/external/build
@@ -3,51 +3,65 @@
 # list of packages
 # the key should be:
 # - INSTALL : the package will be installed by this script
-# - YES : the package is already installed in the system, and its paths
-# must be specified in the following variables
+# - CUSTOM : the package is already installed; its installation
+#   path can be specified in ${package}_install_dir
+# - SYSTEM : the system version of the package will be used
 # - NO : the package will not be used
-# BEWARE! some packages are required and cannot be set to NO!!
 
 for package in "${PACKAGE_ARRAY[@]}"; do
     if [ -z "${!package}" ]; then
-        eval ${package}=INSTALL
+        eval ${package}="INSTALL"
     fi
     eval package_install_dir=\${${package}_install_dir}
-    if [ -z "${package_install_dir}" ]; then
+    if [ -z "${package_install_dir}" ] && [ "${!package}" != "NO" ] && [ "${!package}" != "SYSTEM" ]; then
         eval ${package}_install_dir=${INSTALL_DIR}/external/${package}
     fi
 done
 
 package_install=()
-package_yes=()
+package_custom=()
+package_system=()
 package_no=()
 
+echo "-- Packages:"
 for package in "${PACKAGE_ARRAY[@]}"; do
     if [[ "${!package}" == "INSTALL" ]]; then
-        echo "$package will be installed"
+        echo "     $package will be installed"
         package_install=( ${package_install[@]} $package )
-    elif [[ "${!package}" == "YES" ]]; then
-        echo "$package is already installed"
-        package_yes=( ${package_yes[@]} $package )
+    elif [[ "${!package}" == "CUSTOM" ]]; then
+        eval package_install_dir=\${${package}_install_dir}
+        echo "     $package is already installed in ${package_install_dir}"
+        package_custom=( ${package_custom[@]} $package )
+    elif [[ "${!package}" == "SYSTEM" ]]; then
+        echo "     $package default system version will be used"
+        package_system=( ${package_system[@]} $package )
     elif [[ "${!package}" == "NO" ]]; then
-        echo "$package will not be used"
+        echo "     $package will not be used"
         package_no=( ${package_no[@]} $package )
     fi
 done
 
-echo
-echo "The following packages will be installed:"
-echo ${package_install[@]}
+if [ ${#package_install[@]} -ne 0 ]; then
+    if [ -n "${INSTALL_PACKAGES}" ]; then
+        echo "-- The following packages will be installed:"
+    else
+        echo "-- Skipping the installation of the following packages:"
+    fi
+    echo "     ${package_install[@]}"
+fi
 
-echo
-echo "The following packages are already installed: "
-echo ${package_yes[@]}
+if [ ${#package_custom[@]} -ne 0 ] || [ ${#package_system[@]} -ne 0 ]; then
+    echo "-- The following packages are already installed: "
+    installed_packages=( ${package_custom[@]} ${package_system[@]} )
+    echo "     ${installed_packages[@]}"
+fi
 
-echo
-echo "The following packages will not be used:"
-echo ${package_no[@]}
+if [ ${#package_no[@]} -ne 0 ]; then
+    echo "-- The following packages will not be used:"
+    echo "     ${package_no[@]}"
+fi
 
-if [ -n "${INSTALL_THIRD_PARTIES}" ] && [ ${#package_install[@]} -gt 0 ] ; then
+if [ -n "${INSTALL_PACKAGES}" ] && [ ${#package_install[@]} -gt 0 ] ; then
     pushd scripts >/dev/null
     source pkgbuild ${package_install[@]}
     popd >/dev/null
