Added option to enable tests

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -141,6 +141,10 @@ message(STATUS "LIBRARIES = ${LIBRARIES}")
 #================================
 # Subdirectories
 #================================
+option(${PROJECT_NAME}_ENABLE_TESTS "Enable tests" ON)
+if(${PROJECT_NAME}_ENABLE_TESTS)
+    enable_testing()
+endif()
 add_subdirectory(src)
 
 # Add documentation
