Added to doc/CMakeLists.txt the installation to the install dir.

--- a/FVCode3D/doc/CMakeLists.txt
+++ b/FVCode3D/doc/CMakeLists.txt
@@ -1,15 +1,29 @@
 # find the Doxygen package add
 find_package(Doxygen)
+find_package(LATEX)
 
 if(DOXYGEN_FOUND)
-	# generate Doxyfile
-	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
-               	   ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+    # generate Doxyfile
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
+                   ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
 
-	# add doc target
-	add_custom_target(doc
-			${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-			COMMENT "Generating API documentation with Doxygen" VERBATIM
-			)       
+    # add doc target
+    add_custom_target(doc
+            ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+            COMMENT "Generating API documentation with Doxygen" VERBATIM
+            )
+
+    install(
+        DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html
+        DESTINATION doc
+        COMPONENT doc
+        OPTIONAL
+        )
+    install(
+        DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/latex
+        DESTINATION doc
+        COMPONENT doc
+        OPTIONAL
+        )
 endif(DOXYGEN_FOUND)
