Linked samg to fvcode3d.exe target

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -135,6 +135,7 @@ set(LIBRARIES
     ${BLAS_LIBRARIES}
     rt
     tet
+    samg
     CACHE INTERNAL "")
 message(STATUS "LIBRARIES = ${LIBRARIES}")
 
