Added SAMG_LCASE_USCORE to CMAKE_CXX_FLAGS; set a fixed path to libsamg.so

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -26,7 +26,7 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -frounding-math -DSAMG_UNIX_LINUX")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -frounding-math -DSAMG_UNIX_LINUX -DSAMG_LCASE_USCORE")
 
 # release and debug mode -Wno-deprecated
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DEIGEN_NO_DEBUG")
@@ -133,9 +133,9 @@ set(LIBRARIES
     ${UMFPACK_LIBRARIES}
     ${CHOLMOD_LIBRARIES}
     ${BLAS_LIBRARIES}
+    ${CMAKE_CURRENT_SOURCE_DIR}/lib/libsamg.so
     rt
     tet
-    samg
     CACHE INTERNAL "")
 message(STATUS "LIBRARIES = ${LIBRARIES}")
 
