--- a/FVCode3D/doc/Doxyfile.in
+++ b/FVCode3D/doc/Doxyfile.in
@@ -620,7 +620,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = "@PROJECT_SOURCE_DIR@/src/FVCode3D" "@PROJECT_SOURCE_DIR@/src/main.cpp" "@PROJECT_SOURCE_DIR@/src/functions.hpp"
+INPUT                  =  "@PROJECT_SOURCE_DIR@/doc/main_page.txt" "@PROJECT_SOURCE_DIR@/src/FVCode3D" "@PROJECT_SOURCE_DIR@/src/main.cpp" "@PROJECT_SOURCE_DIR@/src/functions.hpp"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
