--- a/FVCode3D/src/test/CMakeLists.txt
+++ b/FVCode3D/src/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 #add_subdirectory(dummy)
 add_subdirectory(exactSolutionMFD)
-add_subdirectory(exactSolutionFracturedMFD)
+#add_subdirectory(exactSolutionFracturedMFD)
