Added test on Quadrature

--- a/FVCode3D/src/test/CMakeLists.txt
+++ b/FVCode3D/src/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 #add_subdirectory(dummy)
 add_subdirectory(exactSolution)
 add_subdirectory(exactSolutionFractured)
+add_subdirectory(testQuadrature)
