Added test on Quadrature
Conflicts:
	FVCode3D/src/test/CMakeLists.txt

--- a/FVCode3D/src/test/CMakeLists.txt
+++ b/FVCode3D/src/test/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(exactSolution)
 add_subdirectory(exactSolutionFractured)
 add_subdirectory(exactSolutionMFD)
 #add_subdirectory(exactSolutionFracturedMFD)
+add_subdirectory(testQuadrature)
