Updated CMakeLists.txt of tools

--- a/FVCode3D/src/tools/CMakeLists.txt
+++ b/FVCode3D/src/tools/CMakeLists.txt
@@ -5,3 +5,4 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/converterToVTU)
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/converterToSolver)
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/cartGen)
+add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/polyGen)
