--- a/FVCode3D/src/test/CMakeLists.txt
+++ b/FVCode3D/src/test/CMakeLists.txt
@@ -4,3 +4,5 @@ add_subdirectory(exactSolutionFractured)
 add_subdirectory(exactSolutionMFD)
 #add_subdirectory(exactSolutionFracturedMFD)
 add_subdirectory(testQuadrature)
+add_subdirectory(polyMesh)
+add_subdirectory(polyMeshFractured)
