--- a/FVCode3D/src/test/CMakeLists.txt
+++ b/FVCode3D/src/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 #add_subdirectory(dummy)
 add_subdirectory(exactSolution)
 add_subdirectory(exactSolutionFractured)
+add_subdirectory(lowPerm)
 add_subdirectory(exactSolutionMFD)
 #add_subdirectory(exactSolutionFracturedMFD)
 add_subdirectory(testQuadrature)
