Third part libraries are treated as system library (-isystem instead of -I) so that the compiler does not consider the warnings generated by them. With CMake the keyword is SYSTEM when setting the include directories.

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -98,9 +98,11 @@ message(STATUS "${PROJECT_NAME}_TPL_LIBRARY_DIRS = ${${PROJECT_NAME}_TPL_LIBRARY
 message(STATUS "${PROJECT_NAME}_TPL_LIBRARIES = ${${PROJECT_NAME}_TPL_LIBRARIES}")
 message(STATUS "${PROJECT_NAME}_TPL_PACKAGES_PROVIDING_USE_FILES = ${${PROJECT_NAME}_TPL_PACKAGES_PROVIDING_USE_FILES}")
 
-include_directories(${${PROJECT_NAME}_TPL_INCLUDE_DIRS}
+include_directories(SYSTEM ${${PROJECT_NAME}_TPL_INCLUDE_DIRS})
+include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${CMAKE_CURRENT_SOURCE_DIR}/include)
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
 
 link_directories(${${PROJECT_NAME}_TPL_LIBRARY_DIRS}
     ${CMAKE_CURRENT_BINARY_DIR}/lib
