--- a/FVCode3D/doc/Doxyfile.in
+++ b/FVCode3D/doc/Doxyfile.in
@@ -44,14 +44,14 @@ PROJECT_BRIEF          =
 # exceed 55 pixels and the maximum width should not exceed 200 pixels.
 # Doxygen will copy the logo to the output directory.
 
-PROJECT_LOGO           = "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/logo-doxy.png"
+PROJECT_LOGO           = ../logo-doxy.png
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
 # If a relative path is entered, it will be relative to the location
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@
+OUTPUT_DIRECTORY       = 
 
 # If the CREATE_SUBDIRS tag is set to YES, then doxygen will create
 # 4096 sub-directories (in 2 levels) under the output directory of each output
@@ -137,7 +137,7 @@ FULL_PATH_NAMES        = YES
 # If left blank the directory from which doxygen is run is used as the
 # path to strip.
 
-STRIP_FROM_PATH        = .
+STRIP_FROM_PATH        = 
 
 # The STRIP_FROM_INC_PATH tag can be used to strip a user-defined part of
 # the path mentioned in the documentation of a class, which tells
@@ -620,7 +620,10 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  =  "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/doc/main_page.txt" "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/src/FVCode3D" "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/src/main.cpp" "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/src/functions.hpp"
+INPUT                  = main_page.txt \
+                         ../src/FVCode3D \
+                         ../src/main.cpp \
+                         ../src/functions.hpp
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
@@ -688,7 +691,7 @@ RECURSIVE              = YES
 # excluded from the INPUT source files. This way you can easily exclude a
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE                = "/home/corinne/eniReservoirGITHUB/eniReservoir/FVCode3D/src/.metadata"
+EXCLUDE                = 
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
