changed getpot to version 2
I have created the directory FVCode3D/include where to put external
header files like getpot. We should move there also tetgen.h

--- a/FVCode3D/src/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/src/FVCode3D/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE SRC_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*/*.cpp)
 file(GLOB_RECURSE SRC_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*/*.hpp)
-set(SRC_HEADERS ${SRC_HEADERS} FVCode3D.hpp GetPot tetgen.h)
+set(SRC_HEADERS ${SRC_HEADERS} FVCode3D.hpp tetgen.h)
 # We want these to be cache variables so that they are visible at parent scope
 set(LIB_SOURCES ${SRC_SOURCES} CACHE INTERNAL "")
 set(LIB_HEADERS ${SRC_HEADERS} CACHE INTERNAL "")
